some fixes after lectures

--- a/animations/index.html
+++ b/animations/index.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="index.css"/>
   </head>
   <body>
-    <div id="slider">
+    <!-- <div id="slider">
       <div class="slider-block"></div>
     </div>
 
-    <!-- <div id="wrapper">
+    <div id="wrapper">
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
@@ -22,9 +22,9 @@
       <div id="ball"></div>
     </div> -->
 
-    <!-- <div id="js-wrapper">
+    <div id="js-wrapper">
       <div id="js-slider"></div>
-    </div> -->
+    </div>
 
     <script type="text/javascript" src="index.js"></script>
   </body>
